# learn-opengl-record

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  shader.hpp
shaders/: explode.gs  light.fs  norm_display.gs  norm_display.vs  reflect.fs  refract.fs  shader.fs  shader.vs  shader_directional.fs  shader_emit.fs  shader_pointl.fs  simple.fs  testcube.vs
shaders/post/: blur.fs  def.vs  edged.fs  greyscale.fs  sharpen.fs
src/: main.cpp
src/painters/: light_painter.hpp  light_patiner.hpp  model_painter.hpp  painter.hpp
src/utils/: camera.hpp  cube.hpp  glm.hpp  imgui.hpp  imodel.hpp  mesh.hpp  misc.hpp  model.hpp  nfd.hpp  plane.hpp  shader.hpp  skybox.hpp  time.hpp
